# FullScene-CG

./: README.md
Part1/: CMakeLists.txt  main.cpp  source
Part1/data/: big-football-goal.mtl
Part1/include/: glm.h  imageloader.h  objLoader.h  startRendering.hpp  texture.hpp
Part1/src/: glm.cpp  imageloader.cpp  objLoader.cpp  startRendering.cpp  texture.cpp
Part2/: App.py  README.md  RenderGUI.ui
